@@ -44,6 +44,9 @@
 - Created a tool to mass download emails from Microsoft365 (formerly office365)
   You may find it in the contrib/o365 dir
 
+- Obsoleted ENABLE_ON_THE_FLY_VERIFICATION variable
+  The GUI behaves like if ENABLE_ON_THE_FLY_VERIFICATION=0
+
 
 1.4.5:
 ------
